# HeCBench

./: .gitignore  LICENSE  README.md
scripts/: autohecbench.py
scripts/benchmarks/: subset-fails.txt  subset.json  subset_igpu.json  subset_ngpu.json  subset_sycl_edge.json
src/aes-cuda/: Makefile  main.cu
src/aes-hip/: main.cu
src/aes-kokkos/: CMakeLists.txt  SDKBitMap.h  kernels.hpp  main.cpp  utils.hpp
src/aes-omp/: main.cpp
src/aes-sycl/: Makefile  main.cpp
src/affine-cuda/: Makefile  main.cu
src/affine-hip/: Makefile  main.cu
src/affine-kokkos/: CMakeLists.txt  main.cpp
src/affine-omp/: Makefile  main.cpp
src/affine-sycl/: Makefile  main.cpp
src/aobench-cuda/: Makefile
src/aobench-kokkos/: CMakeLists.txt  ao.cpp
src/aobench-sycl/: Makefile  ao.cpp
src/asmooth-cuda/: Makefile  main.cu  reference.hpp
src/asmooth-hip/: main.cu
src/asmooth-kokkos/: CMakeLists.txt  main.cpp
src/asmooth-omp/: Makefile  Makefile.aomp  Makefile.nvc  main.cpp
src/asmooth-sycl/: Makefile  main.cpp
src/attentionMultiHead-cuda/: main.cu
src/attentionMultiHead-sycl/: Makefile  main.cpp
src/background-subtract-cuda/: Makefile  main.cu
src/background-subtract-hip/: main.cu
src/background-subtract-kokkos/: CMakeLists.txt  main.cpp
src/background-subtract-omp/: main.cpp
src/background-subtract-sycl/: Makefile  main.cpp
src/convolutionSeparable-cuda/: Makefile  main.cu
src/convolutionSeparable-hip/: main.cu
src/convolutionSeparable-kokkos/: CMakeLists.txt  conv.cpp  conv.hpp  main.cpp
src/convolutionSeparable-omp/: main.cpp
src/convolutionSeparable-sycl/: Makefile  main.cpp
src/crc64-cuda/: CRC64Test.cu  Makefile
src/crc64-hip/: CRC64Test.cu
src/crc64-kokkos/: CMakeLists.txt  CRC64.cpp  CRC64.h  CRC64Test.cpp
src/crc64-omp/: CRC64Test.cpp
src/crc64-sycl/: CRC64Test.cpp  Makefile
src/dense-embedding-cuda/: Makefile  main.cu
src/dense-embedding-sycl/: Makefile  main.cpp
src/face-cuda/: Makefile  haar.cu  main.cu
src/face-hip/: Makefile
src/face-kokkos/: CMakeLists.txt  haar.cpp  haar.hpp  image.cpp  (+2 more)
src/md5hash-kokkos/: CMakeLists.txt  MD5Hash.cpp
(+80 files in other folders)
